--- a/package.json
+++ b/package.json
@@ -6,12 +6,37 @@
         "build": "vite build",
         "dev": "vite"
     },
+
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "tailwindcss": "^4.1.13",
+        "@vitejs/plugin-vue": "^4.2.3",
+        "autoprefixer": "^10.4.21",
+        "vite": "^7.0.4",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
-    }
+        "postcss": "^8.5.6"
+       
+    },
+    "dependencies": {
+        "vue": "^3.5.21"
+    },
+    "name": "event-system",
+    "version": "1.0.0",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AminaHamoudAli/event-system.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/AminaHamoudAli/event-system/issues"
+    },
+    "homepage": "https://github.com/AminaHamoudAli/event-system#readme"
 }
