--- a/package.json
+++ b/package.json
@@ -6,20 +6,32 @@
         "build": "vite build",
         "dev": "vite"
     },
-
     "devDependencies": {
-        "tailwindcss": "^4.1.13",
-        "@vitejs/plugin-vue": "^4.2.3",
-        "autoprefixer": "^10.4.21",
-        "vite": "^7.0.4",
-        "axios": "^1.11.0",
+        "@inertiajs/vue3": "^2.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/postcss": "^4.1.13",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.12",
+        "axios": "^1.12.2",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.5.6"
-       
+        "laravel-vite-plugin": "^2.0.1",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
+        "vite": "^5.4.20",
+        "vue": "^3.4.0"
     },
     "dependencies": {
-        "vue": "^3.5.21"
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/vue3": "^2.1.7",
+        "@tailwindcss/line-clamp": "^0.4.4",
+        "@vueuse/core": "^13.9.0",
+        "chart.js": "^4.5.0",
+        "class-variance-authority": "^0.7.1",
+        "lucide-vue-next": "^0.544.0",
+        "tailwind-merge": "^3.3.1",
+        "vue": "^3.5.21",
+        "vue-chartjs": "^5.3.2",
+        "vue-router": "^4.5.1"
     },
     "name": "event-system",
     "version": "1.0.0",
